Modifica nome da coluna de descrição

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <thead>
                         <tr>
                             <th scope="col">Nome</th>
-                            <th scope="col">Status</th>
+                            <th scope="col">Descrição</th>
                             <th scope="col">Ações</th>
                         </tr>
                     </thead>
